--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
-== README
+Chefs:
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+What we already have:
+- Chef model and validations
+- Chefs table with columns chefname and email
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+What we need to:
+- Add passwords to the chefs table so chefs can be authenticated and logged in
+- Use email as login credentials, since email is unique
+- Ability to register new chefs to use the app 
+- Ability to display chefs profile
+- Ability to list chefs using the app
+- Ability for chefs to log in and log out of the app
+- Restrict actions like create recipee, edit recipe, and like feature to logged in chefs only
+- Restricting edit of recipes by chefs who created the recipes 
