--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,14 @@
-Chefs:
+Reviews Feature
 
-What we already have:
-- Chef model and validations
-- Chefs table with columns chefname and email
-
-What we need to:
-- Add passwords to the chefs table so chefs can be authenticated and logged in
-- Use email as login credentials, since email is unique
-- Ability to register new chefs to use the app 
-- Ability to display chefs profile
-- Ability to list chefs using the app
-- Ability for chefs to log in and log out of the app
-- Restrict actions like create recipee, edit recipe, and like feature to logged in chefs only
-- Restricting edit of recipes by chefs who created the recipes 
+Need:
+1. Migration to create reviews table. body, type = text_field, 2 foreign keys, reference chef_id, reference recipe_id
+2. Build Review model
+3. Create tests for the spec, add validations to the review model
+4. Build associations (has_many and belongs_to)
+5. Test out associations in Rails console
+- recipe.reviews
+- chef.reviews
+6. Create routes
+7. Authenticated chefs can create reviews, before_action require_user
+8. Associate chef_id and recipe_id 
+9. Use existing code if possible (pagination)
